fixed category images

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/categories.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/categories.html.twig
@@ -4,7 +4,7 @@
     <div data-toggle-desktop="category-2" class="col-sm-6 col-xs-12 no-pad category">
         <div class="category-header gradient-light">
             <div class="image-container">
-                <img src="{{ category.image }}" alt="">
+                <img src="/{{ category.image }}" alt="">
             </div>
             <span class="title">{{ category['title'] }}</span>
         </div>
