--- a/src/Acted/LegalDocsBundle/Resources/views/Default/search.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/search.html.twig
@@ -46,7 +46,7 @@
                 {% endfor %}
             </select>
 
-            <select name="region" id="region">
+            <select name="user_region" id="region">
             </select>
             </form>
         </div>
@@ -103,7 +103,7 @@
             <h2>Artist location</h2>
             <form id="artistLocationSearch">
             <div class="custom-checkbox radio-block">
-                <input checked type="radio" name="location" id="range-near" value="100-km">
+                <input type="radio" name="location" id="range-near" value="100-km">
                 <label for="range-near">Whithin 100 miles</label>
             </div>
 
@@ -113,7 +113,7 @@
             </div>
 
             <div class="custom-checkbox">
-                <input type="radio" name="location" id="range-international" value="international">
+                <input checked type="radio" name="location" id="range-international" value="international">
                 <label for="range-international">International</label>
             </div>
             </form>
@@ -287,53 +287,6 @@
                     </div>
 
                     <div class="row">
-                        <div class="profile-card mobile-horizontal">
-                            <div class="video-icon"></div>
-
-                            <img class="header" src="assets/images/jazz_concert.jpg"/>
-
-                            <p class="card-title">Lady Great Voice</p>
-
-                            <div class="user-rating clearfix">
-                                <div class="stars">
-                                    <div class="star">
-                                        <div style="width: 100%" class="fill-star"></div>
-                                    </div>
-
-                                    <div class="star">
-                                        <div style="width: 100%" class="fill-star"></div>
-                                    </div>
-
-                                    <div class="star">
-                                        <div style="width: 100%" class="fill-star"></div>
-                                    </div>
-
-                                    <div class="star">
-                                        <div style="width: 100%" class="fill-star"></div>
-                                    </div>
-
-                                    <div class="star">
-                                        <div style="width: 30%" class="fill-star"></div>
-                                    </div>
-                                </div>
-
-                                <div class="rating">4.5/5.0 (16 Votes)</div>
-                            </div>
-
-                            <div class="location">United Kingdom, Essex</div>
-
-                            <div class="talents">Singer, Song Writer, Jazz Vocalist, Vocalist</div>
-
-                            <div class="controls">
-                                <div class="button-gradient blue filled">
-                                    <button data-dismiss="modal" class="btn">Profile</button>
-                                </div>
-
-                                <div class="button-gradient blue ">
-                                    <button data-dismiss="modal" class="btn">Ask a free quote</button>
-                                </div>
-                            </div>
-                        </div>
 
                         <div class="controls show-more">
                             <div class="button-gradient">
