--- a/src/Acted/LegalDocsBundle/Resources/views/Default/home.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/home.html.twig
@@ -9,6 +9,10 @@
     <div class="header-block">
         <h2>Welcome here</h2>
 
+        {% for flashMessage in app.session.flashbag.get('confirm') %}
+            {{ flashMessage }}
+        {% endfor %}
+
         <div class="form-group">
             <input class="search-input" type="text" placeholder="Search any entertainers">
             <button class="btn"><i class="fa fa-search"></i></button>
