fixed customer image

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
@@ -23,7 +23,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6 col-sm-push-0 col-xs-8 col-xs-push-2">
-                        <img class="category-img" src="{{ asset('assets/images/Group23.png') }}" alt="">
+                        <img id="customerImg" class="category-img" src="{{ asset('assets/images/Group23.png') }}" alt="">
 
                         <div class="controls category-controls">
                             <div class="button-gradient follow">
