--- a/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
@@ -80,7 +80,7 @@
 
                                 <div class="controls">
                                     <div class="button-gradient filled">
-                                        <button id="stageThreeNextCustomer" type="button" class="btn register">Register Now</button>
+                                        <button id="stageThreeNextCustomer" type="submit" class="btn register submit">Register Now</button>
                                     </div>
 
                                     <button type="button" style="width: 100%; margin-top: 10px;" class="btn-back back-button">Back</button>
