--- a/src/Acted/LegalDocsBundle/Resources/views/Default/search.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/search.html.twig
@@ -152,7 +152,7 @@
                         </select>
 
                         <select data-palaceholder="Price">
-                            <option value="0">Price</option>
+                            <option>Price</option>
                             <option value="1">Lorem Ipsum</option>
                             <option value="2">Lorem Ipsum</option>
                         </select>
