--- a/src/Acted/LegalDocsBundle/Resources/views/Default/home.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/home.html.twig
@@ -15,7 +15,9 @@
 
         <div class="form-group">
             <input class="search-input" type="text" placeholder="Search any entertainers">
+            <a href="/search">
             <button class="btn"><i class="fa fa-search"></i></button>
+            </a>
         </div>
     </div>
 </div>
