--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
@@ -10,21 +10,43 @@
                     </h2>
                     <span class="performanceId hidden">{{ performance.id }}</span>
                     {% for mediaOf in performance.media[0:1] %}
-                        <form action="/media/{{ mediaOf.id }}/edit" method="post" class="dropzone imagePerformanceChange" id="image-performance-change">
-                        </form>
+                        <div class="imagePerformanceChange" id="image-performance-change1">
+                            <span class="hidden mediaId">{{ mediaOf.id }}</span>
+                            <div class="changeImageContiner"></div>
+                            <div class="actions">
+                                <a class="btn btn-file">
+                                    <input type="file" id="uploadImg" value="Choose a file" accept="image/*" />
+                                </a>
+                                <button class="upload-resultBg btn btn-success"><i class="fa fa-floppy-o" aria-hidden="true"></i></button>
+                            </div>
+                        </div>
                         <img class="preview" src="{{ mediaOf.link }}" alt="Preview">
                     {% endfor %}
 
                     <div class="video">
-                        {% for mediaOf in performance.media[1:2] %}
-                            <form action="/media/{{ mediaOf.id }}/edit" method="post" class="dropzone imagePerformanceChange" id="image-performance-change">
-                            </form>
-                            <img src="{{ mediaOf.link }}" alt="">
-                            <span class="glyphicon glyphicon-play"></span>
-
-                            <div class="name">
-                                <div class="name-text">{{ mediaOf.name }}</div>
+                        {% for mediaOf in performance.media[2:2] %}
+                            <div class="imagePerformanceChange" id="image-performance-change2">
+                                <span class="hidden mediaId">{{ mediaOf.id }}</span>
+                                <div class="offerMediaType">
+                                    <button class="btn btn-primary image">Image</button>
+                                    <button class="btn btn-primary video">Video</button>
+                                </div>
+                                <div class="performanceVideoAdd">
+                                    <form class="videoAddForm">
+                                        <input type="text" class="form-control videoPerformanceAdd">
+                                    </form>
+                                    <button type="submit" id="AddPerformanceVideo" class="btn btn-default">Submit</button>
+                                </div>
                             </div>
+
+                            {% if mediaOf.mediaType == "video" %}
+                                <div class="performanceVideo">
+                                <iframe src="{{ mediaOf.link }}" width="395" height="274" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                                </div>
+                                {% else %}
+                                <img class="preview" src="{{ mediaOf.link }}" alt="Preview">
+                            {% endif %}
+
                         {% endfor %}
                     </div>
 
@@ -57,14 +79,18 @@
                     {% endfor %}
 
                     <div class="video">
-                        {% for mediaOf in performance.media[1:2] %}
 
-                            <img src="{{ mediaOf.link }}" alt="">
-                            <span class="glyphicon glyphicon-play"></span>
+                        {% for mediaOf in performance.media[2:2] %}
+                            {% if mediaOf.mediaType == "video" %}
+                                <iframe src="{{ mediaOf.link }}" width="395" height="274" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                            {% else %}
+                                <img class="preview" src="{{ mediaOf.link }}" alt="Preview">
+                            {% endif %}
+                        <!--<span class="glyphicon glyphicon-play"></span>
 
                             <div class="name">
                                 <div class="name-text">{{ mediaOf.name }}</div>
-                            </div>
+                            </div>-->
                         {% endfor %}
                     </div>
 
