fixes in search

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/search.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/search.html.twig
@@ -14,7 +14,7 @@
 
             <div class="wrapper">
                 <form id="searchLoc">
-                <input type="text" placeholder="Search any entertainers">
+                <input type="text" name="query" placeholder="Search any entertainers">
                 <div class="divider"></div>
 
                 <select data-class="selections-white" name="country" id="search-country">
