--- a/src/Acted/LegalDocsBundle/Resources/views/Default/search.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/search.html.twig
@@ -56,10 +56,7 @@
                 {% endfor %}
             </select>
 
-            <select name="user_region" id="region">
-                {% for region in regions %}
-                <option value="{{ region.id }}" name="user_region">{{ region.name }}</option>
-                {% endfor %}
+            <select name="user_city" id="region">
             </select>
             </form>
         </div>
