--- a/src/Acted/LegalDocsBundle/Resources/views/Default/categories.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/categories.html.twig
@@ -24,6 +24,8 @@
 
         </div>
     </div>
-
+    {% if  loop.index % 2 == 0 %}
+        <div class="row"></div>
+    {% endif %}
 {% endfor %}
 </form>
