--- a/src/Acted/LegalDocsBundle/Resources/views/Default/search.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/search.html.twig
@@ -165,10 +165,9 @@
                         <select data-placeholder="Top rated" name="order">
                             <option value="top_rated">Top rated</option>
                             <option value="lowest_rated">Lowest rated</option>
-                            <option value="2">Lorem Ipsum</option>
-                            </select>
-                        <select data-palaceholder="Price" name="order">
-
+                        </select>
+                        <select data-placeholder="Price" name="order">
+                            <option value="" disabled selected hidden>Please Choose...</option>
                             <option value="cheapest">Cheapest</option>
                             <option value="more_expensive">Most expensive</option>
                             </select>
@@ -176,7 +175,7 @@
                             <option value="50">From 0 to 50km</option>
                             <option value="200">From 50 to 200km</option>
                             <option value="1000">From 200km to 1000km</option>
-                            </select>
+                        </select>
                         <div class="custom-checkbox">
                             <input type="checkbox" name="with_video" value="1" id="only-video">
                             <label for="only-video">Only artists with video</label>
