--- a/src/Acted/LegalDocsBundle/Resources/views/Default/search.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/search.html.twig
@@ -162,16 +162,18 @@
 
                     <div class="filters">
                         <form id="recomendedFilter">
-                        <select data-placeholder="Top rated" name="order">
+                        <select data-placeholder="Rating" name="order" id="recFilterRating">
+                            <option value="" disabled selected hidden>Rating</option>
                             <option value="top_rated">Top rated</option>
                             <option value="lowest_rated">Lowest rated</option>
                         </select>
-                        <select data-placeholder="Price" name="order">
-                            <option value="" disabled selected hidden>Please Choose...</option>
+                        <select data-placeholder="Price" name="order" id="recFilterPrice">
+                            <option value="" disabled selected hidden>Price</option>
                             <option value="cheapest">Cheapest</option>
                             <option value="more_expensive">Most expensive</option>
                             </select>
                         <select data-palaceholder="Distance" name="distance">
+                            <option value="" disabled selected hidden>Distance</option>
                             <option value="50">From 0 to 50km</option>
                             <option value="200">From 50 to 200km</option>
                             <option value="1000">From 200km to 1000km</option>
@@ -195,7 +197,10 @@
                                 {% for recomendedArtist in recommendation.artists %}
 
                                 <div class="profile-card bordered">
-                                    <div class="video-icon"></div>
+
+                                    {% if recomendedArtist.video_media %}
+                                        <div class="video-icon"></div>
+                                    {% endif %}
 
                                     <img class="header" src="{{ recomendedArtist.media.link }}"/>
 
