Fixed video in offers, message if no results, search from homepage

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/home.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/home.html.twig
@@ -14,8 +14,8 @@
         {% endfor %}
 
         <div class="form-group">
-            <input class="search-input" type="text" placeholder="Search any entertainers">
-            <a href="/search">
+            <input class="search-input" id="homeSearchInput" type="text" placeholder="Search any entertainers">
+            <a href="/search" class="homeSearchStart">
             <button class="btn"><i class="fa fa-search"></i></button>
             </a>
         </div>
