--- a/src/Acted/LegalDocsBundle/Resources/views/Default/search.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/search.html.twig
@@ -14,7 +14,7 @@
 
             <div class="wrapper">
                 <form id="searchLoc">
-                <input type="text" name="query" placeholder="Search any entertainers">
+                <input type="text" name="query" id="searchQuery" placeholder="Search any entertainers">
                 <div class="divider"></div>
 
                 <select data-class="selections-white" name="country" id="search-country">
@@ -36,7 +36,7 @@
                 </form>
             </div>
 
-            <button class="btn"><i class="fa fa-search"></i><span>Search</span></button>
+            <button class="btn searchFormStart"><i class="fa fa-search"></i><span>Search</span></button>
         </div>
     </div>
 </div>
