--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/modals.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/modals.html.twig
@@ -32,3 +32,20 @@
         </div>
     </div>
 </div>
+
+<div class="modal registration-modal fade" id="addImageModal">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            <div class="changeImageContiner"></div>
+            <div class="actions">
+                <a class="btn file-btn">
+                    <input type="file" id="uploadNewMedia" value="Choose a file" accept="image/*" />
+                </a>
+                <button class="upload-NewMedia">Upload Image</button>
+            </div>
+        </div>
+    </div>
+</div>
