--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -6512,6 +6512,13 @@ span.removeNewImage
 .performanceVideoAdd
 {
     display: none;
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 90px;
+}
+.performanceVideoAdd button
+{
+    margin-top: 10px;
 }
 .no-res-block
 {
@@ -6521,4 +6528,12 @@ span.removeNewImage
 .imagePerfinput
 {
     display: none;
+}
+#profileAddNewMedia
+{
+    margin-bottom: 25px;
+}
+#addImageModal .actions
+{
+    text-align: center;
 }
