--- a/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
@@ -135,7 +135,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="phone_number">Phone number</label>
-                                <input type="text" name="phone" class="form-control" minlength="11" id="phone_number" placeholder="Phone number" required>
+                                <input type="text" name="phone" class="form-control" minlength="11" id="phone_number" placeholder="+111111111111" required>
                                 <label class="icon"></label>
                             </div>
 
