Add city in registration

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
@@ -119,6 +119,12 @@
                             </div>
 
                             <div class="form-group">
+                                <label for="cityReg">City</label>
+                                <select name="city" id="cityReg">
+                                </select>
+                            </div>
+
+                            <div class="form-group">
                                 <label for="email">Email</label>
                                 <input type="email" name="email" class="form-control" id="email" placeholder="Email" required>
                                 <label class="icon"></label>
