fix image adding

--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
@@ -28,7 +28,7 @@
                             <div class="imagePerformanceChange" id="image-performance-change2">
                                 <span class="hidden mediaId">{{ mediaOf.id }}</span>
                                 <div class="offerMediaType">
-                                    <button class="btn btn-primary image">Image</button>
+                                    <button class="btn btn-primary image" data-toggle="modal" data-target="#addImageModal">Image</button>
                                     <button class="btn btn-primary video">Video</button>
                                 </div>
                                 <div class="performanceVideoAdd">
@@ -42,7 +42,7 @@
                                     <div class="changeImageContiner"></div>
                                     <div class="actions">
                                         <a class="btn btn-file">
-                                            <input type="file" id="uploadImg" value="Choose a file" accept="image/*" />
+                                            <input type="file" class="uploadImg" value="Choose a file" accept="image/*" />
                                         </a>
                                         <button class="upload-resultBg btn btn-success"><i class="fa fa-floppy-o" aria-hidden="true"></i></button>
                                     </div>
@@ -162,7 +162,7 @@
                         <div class="imagePerformanceChange" id="image-performance-change2">
                             <span class="hidden mediaId"></span>
                             <div class="offerMediaType">
-                                <button class="btn btn-primary image">Image</button>
+                                <button class="btn btn-primary image" data-toggle="modal" data-target="#addImageModal">Image</button>
                                 <button class="btn btn-primary video">Video</button>
                             </div>
                             <div class="performanceVideoAdd">
