home page cards links

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/cardsSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/cardsSection.html.twig
@@ -20,7 +20,7 @@
                                 </p>
 
                                 <div class="button-gradient filled follow">
-                                    <button class="btn">See more</button>
+                                    <button class="btn"><a href="search/{{ categoryCard.slug }}">See more</a></button>
                                 </div>
                             </div>
                         </div>
