--- a/src/Acted/LegalDocsBundle/Resources/views/Default/search.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/search.html.twig
@@ -119,12 +119,12 @@
             </div>
 
             <div class="custom-checkbox radio-block">
-                <input type="radio" name="location" id="range-country" value="same-country">
+                <input checked type="radio" name="location" id="range-country" value="same-country">
                 <label for="range-country">Same country</label>
             </div>
 
             <div class="custom-checkbox">
-                <input checked type="radio" name="location" id="range-international" value="international">
+                <input type="radio" name="location" id="range-international" value="international">
                 <label for="range-international">International</label>
             </div>
             </form>
